# cde-project-ml-2026

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/raw/: dataset_entrenamiento.csv  dataset_pruebas.csv  dataset_unificado.csv
docs/: datos.md  etapa1.md  presentacion.md
notebooks/: 00_colab_setup.ipynb  01_eda.ipynb  02_preprocesamiento.ipynb  03_baselines_y_metricas.ipynb  04_interpretabilidad.ipynb
reports/: baseline_metrics.json  dataset_summary.json  finetune_mbert_metrics.json  finetune_xlmr_metrics.json  hyperparameter_tuning.json  kappa_report.json  lime_explanation.json  metricas_comparativas.csv
scripts/: prepare_data.py  run_baselines.py  run_eda.py  run_finetune.py  run_interpretability.py  run_tune.py  run_validation.py  train_model.py  verify_hf_env.py
src/discurso_odio/: __init__.py  config.py
src/discurso_odio/data/: __init__.py  agreement.py  loader.py  taxonomy.py  validation.py
src/discurso_odio/eda/: __init__.py  analysis.py  stats.py
src/discurso_odio/features/: __init__.py  preprocessing.py  text_features.py
src/discurso_odio/models/: __init__.py  baselines.py  evaluate.py  interpret.py  train.py  transformers_ft.py  tune.py
src/discurso_odio/utils/: __init__.py  paths.py
tests/: test_paths.py  test_preprocessing.py  test_taxonomy.py  test_validation.py
